# tiny

./: .gitignore  Main.hs  README.md  adjunction.tiny  examples.tiny  hoas.tiny  inductive.tiny  package.yaml  sqc.tiny  stack.yaml  tiny.bib  tiny.cabal  tiny.tex  types.bib
app/: Main.hs
src/Tiny/: Check.hs  Core.hs  Env.hs  Parser.hs  Pretty.hs  Renaming.hs  Syntax.hs  Value.hs
