cabal-version:      3.0
name:               tiny
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             mvr
maintainer:         mitchell.v.riley@gmail.com
category:           Language
build-type:         Simple

common warnings
    ghc-options:
        -Wall -funbox-strict-fields -Wno-unused-imports
        -Wno-unused-top-binds -Wno-name-shadowing

common extensions
    default-extensions:
        BangPatterns
        BlockArguments
        ConstraintKinds
        DeriveFunctor
        DerivingVia
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        ImplicitParams
        LambdaCase
        MultiParamTypeClasses
        NoMonomorphismRestriction
        OverloadedStrings
        PatternSynonyms
        RankNTypes
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        Strict
        TupleSections
        UndecidableInstances
        ViewPatterns

library
    import:           warnings
    import:           extensions
    default-language: GHC2021
    exposed-modules:
        Tiny.Check
        Tiny.Core
        Tiny.Env
        Tiny.Parser
        Tiny.Pretty
        Tiny.Syntax
        Tiny.Value
    -- other-extensions:
    build-depends:
        base ^>=4.19.2.0
      , megaparsec
    hs-source-dirs:   src

executable tiny
    import:           warnings
    import:           extensions
    default-language: GHC2021
    main-is:          Main.hs
    build-depends:
        base ^>=4.19.2.0
      , tiny
      , megaparsec
    hs-source-dirs:   app
